--- a/style.css
+++ b/style.css
@@ -1,23 +1,30 @@
 body{
+    font-family: 'Inter', sans-serif;
     font-family: 'Poppins', sans-serif;
 }
 h1{
-    font-size: 85px;
+    font-size: 80px;
 }
 .top-banner{
     color: white;
-    padding-top: 174px;
+    padding-top: 274px;
     padding-bottom: 175px;
     padding-left: 357px;
     padding-right: 357px;
-    background-image: url(images/donation4.jpg);
+    background-image: url(images/donation14.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-weight: 900;
     margin: 0px;
     text-align: center;
 }
+#top-2{
+    padding-bottom: 100px;
+}
 .link-button{
-    background-color:#FF5959;
+    background-color: rgb(255, 67, 67);
     text-decoration: none;
+    padding: 15px 35px;
+    border-radius: 12px;
+    color: white;
 }
