--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ h1{
 }
 h2{
     font-size: 45px;
+    text-align: center;
+    font-weight:900;
 }
 .top-banner{
     color: white;
@@ -48,4 +50,40 @@ h2{
     margin-top: 60px;
     margin-left: 100px;
     margin-bottom: 40px;
+}
+.donate-plan{
+    margin-top: 180px;
+}
+.flexible-container{
+    display: flex;
+    margin-bottom: 150px;
+    margin-top: 100px;
+
+}
+#donate-item1{
+    width: 80%;
+    margin-left: 15%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 8px;
+    background: rgba(79, 157, 166, 0.1);
+    border-radius: 5px;
+}
+#donate-item2{
+    width: 80%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 8px;
+    background: rgba(255, 89, 89, 0.1);
+    border-radius: 5px;
+}
+#donate-item3{
+    width: 80%;
+    margin-left: 5%;
+    margin-right: 15%;
+    padding: 20px;
+    border-radius: 8px;
+    background: rgba(53, 152, 163, 0.2);
+    border-radius: 5px;
 }
